# waii-sdk-py

./: DEVELOPMENT.md  README.md  USE_COLAB.md  USE_NOTEBOOK.md  add_apache_headers.py  setup.cfg  setup.py
doc/: colab-notebook-example.ipynb  docusaurus.config.js  package-lock.json  package.json  sidebars.js
doc/docs/: #notebook-example.md#  access-rule-module.md  access-rules-module.md  async-client.md  chart-module.md  chat-module.md  colab.md  database-module.md  getting-started.md  history-module.md  install.md  intro.md  knowledge-graph-module.md  metabase-rendering.md  multi-tenant-client-module.md  multi-tenant-client.md  notebook.md  semantic-context-module.md  semantic-layer-dump-module.md  sql-query-module.md  superset-rendering.md  superset-waii-usage.md  user-module.md  waii-example.ipynb  (+4 more)
samples/: hello_waii.py
test/: DatabaseTest.py  QueryTest.py  SemanticContextTest.py  __init__.py  database_tests.py  history_tests.py  query_tests.py  semantic_context_tests.py
tests/: README.md  __init__.py  async_client_test.py  async_query_test.py  chat_test.py  chat_v2_test.py  common_test_utils.py  constants.py  database_test.py  database_tests.py  history_test.py  history_tests.py  knowledge_graph_test.py  multi_tenant_client_test.py  multi_tenant_semantic_context_test.py  push_db_conn.py  query_test.py  query_tests.py  semantic_context_test.py  semantic_context_tests.py  semantic_layer_dump_test.py  test2.py  user_tests.py  waii_basemodel_test.py  waii_sdk_tests.py
waii_sdk_py/: __init_.py  __init__.py  test.py  waii-sdk-py.py  waii_sdk_py.py
(+45 files in other folders)
