[metadata]
name = waii-sdk-py
version = 1.20.1
description = Provides access to the Waii APIs
long_description = file: README.md
long_description_content_type = text/markdown
author = Waii, Inc.
license = Apache License 2.0
url = http://www.waii.ai
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    requests
python_requires = >=3.6
